red/overlays/baz/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: red
  namespace: baz
spec:
  selector:
    matchLabels:
      app: red
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: red
    spec:
      restartPolicy: Always
      containers:
      - resources:
          requests: {}
          limits:
            cpu: 250m
            memory: 250M
        imagePullPolicy: Always
        image: dudo/red:latest
        name: red
        ports:
        - containerPort: 80
