red/overlays/baz/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: red
  namespace: baz
spec:
  type: NodePort
  selector:
    app: red
  ports:
  - port: 80
