red/overlays/baz/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: red
  namespace: baz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: baz.localhost
    http:
      paths:
      - path: "/red"
        backend:
          serviceName: red
          servicePort: 80
